--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,10 +8,11 @@
 	<title>Простой Quiz</title>
 	<link rel="stylesheet" href="./style.css" />
 </head>
+
 <body>
 
 	<div class="quiz" id="quiz">
-
+		<p id="subtitle">%currentQuestion%</p>
 		<div class="quiz-header" id="header">
 			<h2 class="title">Загружаем вопрос...</h2>
 
@@ -40,4 +42,5 @@
 
 	<script src="./script.js"></script>
 </body>
+
 </html>
